--- a/index.html
+++ b/index.html
@@ -252,7 +252,8 @@
             inventory: "stock-movement.html",
             sales: "store.html",
             warehouse: "warehouse.html",
-            finance: "approve.html"
+            finance: "approve.html",
+            chairman: "chairman.html"
           };
           const target = redirectMap[user.role] || "welcome.html";
           setTimeout(() => window.location.href = target, 1500);
