--- a/stats.html
+++ b/stats.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
-<!-- Coding by CodingNepal || www.codingnepalweb.com -->
 <html lang="en">
 
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Eraskon Inventory Management</title>
-<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.1/dist/tailwind.min.css" rel="stylesheet">
-  <!-- Bootstrap 5 -->
   </head>
 
 <body>
   <script src="components/uiComponents.js"></script>
   <script src="components/spinner.js"></script>
-  <!-- Load Auth Guard -->
   <script src="components/authGuard.js"></script>
-  <!-- Load Navbar -->
   <script src="components/navbar.js"></script>
 
-  <!-- Load Sidebar -->
   <script src="components/sidebar.js"></script>
 
   <main id="app" class="main-content">
@@ -39,7 +34,7 @@
       <span v-if="selectedWarehouse">
         <br>
         <strong>Location:</strong> {{ selectedWarehouse.location }}<br>
-        <strong>Stock:</strong> {{ selectedWarehouse.stock || selectedWarehouse.totalStock || 0 }}
+        <strong>Stock:</strong> {{ selectedWarehouseTotalStock }}
       </span>
     </div>
 
@@ -173,6 +168,14 @@
         selectedWarehouse() {
           return this.warehouses.find(w => w._id === this.selectedWarehouseId) || null;
         },
+        // FIX 1: Computed property to calculate aggregate stock for the selected warehouse summary box
+        selectedWarehouseTotalStock() {
+          if (!this.selectedWarehouseId) return 0;
+          return this.products.reduce((sum, p) => {
+            const wh = (p.warehouses || []).find(w => w.warehouse === this.selectedWarehouseId);
+            return sum + (wh ? (wh.stock || 0) : 0);
+          }, 0);
+        },
         filteredProducts() {
           let list = this.products;
           if (this.selectedWarehouseId) {
@@ -226,7 +229,7 @@
             const warehouseData = await warehouseRes.json();
             this.warehouses = Array.isArray(warehouseData) ? warehouseData : (warehouseData.warehouses || []);
             // Fetch products
-            const prodRes = await fetch(`${API_BASE}/products`, {
+            const prodRes = await fetch(`${API_BASE}/product-variant`, {
               headers: { Authorization: `Bearer ${token}` }
             });
             const prodData = await prodRes.json();
@@ -273,9 +276,14 @@
 
           if (this.salesChart) this.salesChart.destroy();
           if (this.productChart) this.productChart.destroy();
+          if (this.salesPieChart) this.salesPieChart.destroy();
+          if (this.stockPieChart) this.stockPieChart.destroy();
+
 
           const ctxSales = document.getElementById("salesChart").getContext("2d");
           const ctxProduct = document.getElementById("productChart").getContext("2d");
+          const ctxSalesPie = document.getElementById("salesPieChart").getContext("2d");
+          const ctxStockPie = document.getElementById("stockPieChart").getContext("2d");
 
           let labels = [];
           let dataset1 = [], dataset2 = [];
@@ -406,13 +414,6 @@
             plugins: [ChartDataLabels]
           });
 
-          // Destroy old pie charts if they exist
-          if (this.salesPieChart) this.salesPieChart.destroy();
-          if (this.stockPieChart) this.stockPieChart.destroy();
-
-          const ctxSalesPie = document.getElementById("salesPieChart").getContext("2d");
-          const ctxStockPie = document.getElementById("stockPieChart").getContext("2d");
-
           // Product Sales Pie Chart
           const salesDataArr = this.getProductSalesData();
           this.salesPieChart = new Chart(ctxSalesPie, {
@@ -468,11 +469,31 @@
           });
         },
         updateCards() {
+          let totalProducts = new Set();
+          let totalAmount = 0;
+          let orderCount = this.orders.length;
+          let availableStock = 0; // Initialize for all warehouses
+
+          // Base calculation for 'Total Amount' and 'Total Products' (based on all orders)
+          this.orders.forEach(order => {
+              let orderAmount = 0;
+              if (order.items && Array.isArray(order.items)) {
+                  order.items.forEach(item => {
+                      totalProducts.add(item.productVariantId || item.product || item.sku || item.name);
+                      // Use price * quantity for a more accurate item total
+                      orderAmount += (Number(item.price) || 0) * (Number(item.quantity) || 1);
+                  });
+              }
+              // Add order total as a fallback or if line-item pricing is missing
+              totalAmount += orderAmount || Number(order.total) || 0;
+          });
+
           if (this.selectedWarehouseId) {
-            // Aggregate order data for the selected warehouse
-            let productSet = new Set();
-            let totalAmount = 0;
-            let orderCount = 0;
+            // Recalculate based on selected warehouse
+            
+            let whProductSet = new Set();
+            let whTotalAmount = 0;
+            let whOrderCount = 0;
 
             this.orders.forEach(order => {
               let orderHasWarehouse = false;
@@ -480,54 +501,40 @@
               if (order.items && Array.isArray(order.items)) {
                 order.items.forEach(item => {
                   if (item.warehouse === this.selectedWarehouseId) {
-                    productSet.add(item.productVariantId || item.product || item.sku || item.name);
-                    orderAmount += Number(item.price) * (Number(item.quantity) || 1) || 0;
+                    whProductSet.add(item.productVariantId || item.product || item.sku || item.name);
+                    orderAmount += (Number(item.price) || 0) * (Number(item.quantity) || 1);
                     orderHasWarehouse = true;
                   }
                 });
               }
               if (orderHasWarehouse) {
-                orderCount += 1;
-                totalAmount += orderAmount || Number(order.total) || 0;
+                whOrderCount += 1;
+                whTotalAmount += orderAmount || Number(order.total) || 0;
               }
             });
 
             // Available stock for this warehouse
-            let warehouseStock = 0;
-            this.products.forEach(p => {
-              const wh = (p.warehouses || []).find(w => w.warehouse === this.selectedWarehouseId);
-              warehouseStock += wh ? (wh.stock || 0) : 0;
-            });
+            availableStock = this.products.reduce((sum, p) => {
+                const wh = (p.warehouses || []).find(w => w.warehouse === this.selectedWarehouseId);
+                return sum + (wh ? (wh.stock || 0) : 0);
+            }, 0);
 
             this.cards = [
-              { title: 'Total Products', value: productSet.size },
-              { title: 'Total Sales', value: orderCount },
-              { title: 'Available Stock', value: warehouseStock },
-              { title: 'Total Amount', value: `₦${totalAmount.toLocaleString()}` }
+              { title: 'Total Products (WH)', value: whProductSet.size },
+              { title: 'Total Sales (WH)', value: whOrderCount },
+              { title: 'Available Stock (WH)', value: availableStock },
+              { title: 'Total Amount (WH)', value: `₦${whTotalAmount.toLocaleString()}` }
             ];
           } else {
-            // All warehouses (default)
-            let productSet = new Set();
-            let totalAmount = 0;
-            let orderCount = this.orders.length;
-
-            this.orders.forEach(order => {
-              if (order.items && Array.isArray(order.items)) {
-                order.items.forEach(item => {
-                  productSet.add(item.productVariantId || item.product || item.sku || item.name);
-                  totalAmount += Number(item.price) * (Number(item.quantity) || 1) || 0;
-                });
-              }
-              totalAmount += Number(order.total) || 0;
-            });
-
-            // Available stock for all warehouses
-            let allStock = this.products.reduce((sum, p) => sum + (p.stock || 0), 0);
+            // All warehouses (default) - Use a robust stock calculation
+            availableStock = this.products.reduce((sum, p) => 
+                sum + (p.warehouses || []).reduce((whSum, wh) => whSum + (wh.stock || 0), 0)
+            , 0);
 
             this.cards = [
-              { title: 'Total Products', value: productSet.size },
+              { title: 'Total Products', value: totalProducts.size },
               { title: 'Total Sales', value: orderCount },
-              { title: 'Available Stock', value: allStock },
+              { title: 'Available Stock', value: availableStock },
               { title: 'Total Amount', value: `₦${totalAmount.toLocaleString()}` }
             ];
           }
@@ -538,7 +545,7 @@
           this.updateCards();
         },
         getProductSalesData() {
-          // Returns [{ name, count }]
+          // Returns [{ name, count }] for 'Product Sales Distribution' pie chart
           const stats = {};
           this.orders.forEach(order => {
             if (!order.items) return;
@@ -552,22 +559,37 @@
           });
           return Object.values(stats);
         },
+        // FIX 2: Corrected logic to aggregate stock across all products for the pie chart
         getWarehouseStockData() {
-          // Returns [{ name, stock }]
-          let products = this.products;
-          if (this.selectedWarehouseId) {
-            products = products.filter(p =>
-              (p.warehouses || []).some(w => w.warehouse === this.selectedWarehouseId)
-            );
-          }
-          return products.map(p => {
-            let stock = p.stock || 0;
-            if (this.selectedWarehouseId) {
-              const wh = (p.warehouses || []).find(w => w.warehouse === this.selectedWarehouseId);
-              stock = wh ? wh.stock : 0;
-            }
-            return { name: p.name, stock };
+          const warehouseStockMap = {};
+
+          // Initialize map with all warehouse IDs and zero stock
+          this.warehouses.forEach(w => {
+            warehouseStockMap[w._id] = { name: w.name, stock: 0 };
           });
+
+          // Aggregate stock from all product variants
+          this.products.forEach(product => {
+            (product.warehouses || []).forEach(whData => {
+              const warehouseId = whData.warehouse;
+              const stock = whData.stock || 0;
+              
+              if (warehouseStockMap[warehouseId]) {
+                warehouseStockMap[warehouseId].stock += stock;
+              } else if (!warehouseId && whData.name) {
+                // Handle product warehouse entries that don't have a linked ID but have a name (like the first entry in your data)
+                const tempKey = `UNLINKED_${whData.name}`;
+                if (!warehouseStockMap[tempKey]) {
+                    warehouseStockMap[tempKey] = { name: whData.name, stock: 0 };
+                }
+                warehouseStockMap[tempKey].stock += stock;
+              }
+            });
+          });
+
+          // Convert the map values back to an array for Chart.js
+          return Object.values(warehouseStockMap)
+                       .filter(data => data.stock > 0); // Only show warehouses with stock
         }
       },
       mounted() {
