--- a/user.html
+++ b/user.html
@@ -438,6 +438,7 @@
                 <option value="sales" selected>Sales</option>
                 <option value="warehouse" selected>Warehouse</option>
                 <option value="inventory" selected>Inventory</option>
+                <option value="chairman">Chairman</option>
             </select>
 
             <label for="warehouseSelect">Warehouse:</label>
