major updates railway deploy

--- a/customer.html
+++ b/customer.html
@@ -9,7 +9,17 @@
   <link rel="stylesheet" href="assets/css/style.css" />
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-  <style>
+  
+   <script src="assets/js/metaManager.js"></script>
+  <script>
+    setMeta({
+      title: "Eraskon | Customers",
+      desc: "Access the Eraskon Inventory portal to manage customers.",
+      image: "assets/images/eraskon_logo.webp",
+      favicon: "assets/images/eraskon_logo.webp",
+      keywords: "Inventory, Warehouse, Stock, Sales, Customers"
+    });
+  </script><style>
     /* Your base styles here */
     :root {
       --bg-light: #e2dcdc;
