--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       title: "Eraskon | Login & Activation",
       desc: "Access the Eraskon Inventory portal to login or activate your account.",
       image: "assets/images/eraskon_logo.webp",
-      favicon: "assets/images/eraskon_favicon.png",
+      favicon: "assets/images/eraskon_logo.webp",
       keywords: "Inventory, Warehouse, Stock, Sales, Login, Activation"
     });
   </script>
