--- a/shipping.html
+++ b/shipping.html
@@ -7,6 +7,16 @@
   <title>Shipping Dashboard - Eraskon</title>
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="assets/css/style.css">
+   <script src="assets/js/metaManager.js"></script>
+  <script>
+    setMeta({
+      title: "Eraskon | Shipping",
+      desc: "Access the Eraskon Inventory portal to manage shipping.",
+      image: "assets/images/eraskon_logo.webp",
+      favicon: "assets/images/eraskon_logo.webp",
+      keywords: "Inventory, Warehouse, Stock, Shipping"
+    });
+  </script>
   <style>
     :root {
       --primary: #2563eb;
