--- a/warehouse.html
+++ b/warehouse.html
@@ -16,7 +16,16 @@
   <!-- PDF Export -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
-
+ <script src="assets/js/metaManager.js"></script>
+  <script>
+    setMeta({
+      title: "Eraskon | Warehouses",
+      desc: "Access the Eraskon Inventory portal to manage warehouses.",
+      image: "assets/images/eraskon_logo.webp",
+      favicon: "assets/images/eraskon_logo.webp",
+      keywords: "Inventory, Warehouse, Stock, Warehouses"
+    });
+  </script>
   <style>
     /* Reuse your theme and table styles */
     :root {
