--- a/welcome.html
+++ b/welcome.html
@@ -13,7 +13,16 @@
 
   <!-- Font for aesthetics -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-
+   <script src="assets/js/metaManager.js"></script>
+  <script>
+    setMeta({
+      title: "Eraskon | Welcome",
+      desc: "Access the Eraskon Inventory portal to manage welcome page.",
+      image: "assets/images/eraskon_logo.webp",
+      favicon: "assets/images/eraskon_logo.webp",
+      keywords: "Inventory, Warehouse, Stock, Welcome"
+    });
+  </script>
   <style>
     body {
       font-family: 'Inter', sans-serif;
