--- a/invoiced.html
+++ b/invoiced.html
@@ -5,6 +5,16 @@
   <title>Eraskon Invoice PDF</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+ <script src="assets/js/metaManager.js"></script>
+  <script>
+    setMeta({
+      title: "Eraskon | Invoice",
+      desc: "Access the Eraskon Inventory portal to view and generate invoices.",
+      image: "assets/images/eraskon_logo.webp",
+      favicon: "assets/images/eraskon_logo.webp",
+      keywords: "Inventory, Warehouse, Stock, Sales, Invoice"
+    });
+  </script>
 </head>
 <body>
   <button onclick="previewInvoice()">Generate Invoice PDF</button>
