--- a/stats.html
+++ b/stats.html
@@ -12,7 +12,16 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.1/dist/tailwind.min.css" rel="stylesheet">
-  
+   <script src="assets/js/metaManager.js"></script>
+  <script>
+    setMeta({
+      title: "Eraskon | Statistics",
+      desc: "Access the Eraskon Inventory portal to manage statistics.",
+      image: "assets/images/eraskon_logo.webp",
+      favicon: "assets/images/eraskon_logo.webp",
+      keywords: "Inventory, Warehouse, Stock, Statistics"
+    });
+  </script>
   <style>
     /* Global Overrides for White Background and Clean Transitions */
     body {
