--- a/sale.html
+++ b/sale.html
@@ -26,7 +26,7 @@
       keywords: "Inventory, Warehouse, Stock, Sales"
     });
   </script>
-  // <style>
+   <style>
     /* 1. SIMPLIFIED COLOR VARIABLES FOR BALANCE */
     :root {
       --bg-light: #f3f4f6;
