--- a/index.html
+++ b/index.html
@@ -9,15 +9,10 @@
   <link rel="stylesheet" href="assets/css/style_auth.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
-  <script src="assets/js/metaManager.js"></script>
+<script src="assets/js/metaManager.js"></script>
   <script>
-    // Placeholder function for setMeta (Assuming it's loaded from metaManager.js)
-    function setMeta(meta) {
-      document.title = meta.title;
-      // ... (rest of meta tag setting logic)
-    }
     setMeta({
-      title: "Eraskon | Login & Activation",
+      title: "Eraskon | login & Activation",
       desc: "Access the Eraskon Inventory portal to login or activate your account.",
       image: "assets/images/eraskon_logo.webp",
       favicon: "assets/images/eraskon_logo.webp",
